Prevent double scroll issue

--- a/src/client/app/admin/dashboard/dashboard.styles.scss
+++ b/src/client/app/admin/dashboard/dashboard.styles.scss
@@ -1,5 +1,6 @@
 .category-options {
   overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 .add-btn-container {
